--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
@@ -18,18 +17,18 @@
         android:name=".MyApplication"
         android:allowBackup="true"
         android:appComponentFactory="AnyStrings"
-        tools:replace="android:appComponentFactory"
         android:icon="@mipmap/elite_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/elite_launcher_circle"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        tools:replace="android:appComponentFactory">
+
         <activity
             android:name=".chat.ChatActivity"
             android:label="@string/title_activity_chat"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <!-- Add your API key For Razor Payment Gateway here -->
+            android:theme="@style/AppTheme.NoActionBar" /> <!-- Add your API key For Razor Payment Gateway here -->
         <meta-data
             android:name="com.razorpay.ApiKey"
             android:value="rzp_live_b7vQ8lyFs69syy" />
@@ -73,8 +72,8 @@
         <!-- </receiver> -->
         <activity
             android:name=".splash.SplashScreenActivity"
-            android:screenOrientation="portrait"
-            android:noHistory="true">
+            android:noHistory="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -171,9 +170,9 @@
             android:label="@string/title_activity_terms_condition"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-        <activity android:name=".welcome.WelcomeActivity"
-            android:screenOrientation="portrait"
-            />
+        <activity
+            android:name=".welcome.WelcomeActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".welcome.EulaActivity"
             android:label="@string/title_activity_eula"
@@ -313,6 +312,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.rb.elite.HomeActivity" />
         </activity>
+
+        <activity
+            android:name=".insurance.companyDetail.InsuranceCompActivity"
+            android:label="@string/title_activity_insurance_comp"
+            android:parentActivityName=".HomeActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
